WAL-57 - SeparatorView implementations

--- a/app/src/main/res/layout-land/fragment_carrier_verify_phone.xml
+++ b/app/src/main/res/layout-land/fragment_carrier_verify_phone.xml
@@ -121,7 +121,7 @@
       app:layout_constraintTop_toBottomOf="@+id/payment_methods_header"
       />
 
-  <com.asfoundation.wallet.ui.iab.payments.common.SeparatorView
+  <com.asfoundation.wallet.ui.common.SeparatorView
       android:id="@+id/mid_separator"
       android:layout_width="wrap_content"
       android:layout_height="0dp"
@@ -134,7 +134,7 @@
       app:line_type="dashed"
       />
 
-  <com.asfoundation.wallet.ui.iab.payments.common.SeparatorView
+  <com.asfoundation.wallet.ui.common.SeparatorView
       android:id="@+id/top_separator"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
@@ -144,7 +144,7 @@
       app:layout_constraintTop_toTopOf="parent"
       />
 
-  <com.asfoundation.wallet.ui.iab.payments.common.SeparatorView
+  <com.asfoundation.wallet.ui.common.SeparatorView
       android:id="@+id/bottom_separator"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
