--- a/app/src/main/res/layout/referrals_layout.xml
+++ b/app/src/main/res/layout/referrals_layout.xml
@@ -18,12 +18,14 @@
       app:layout_constraintBottom_toTopOf="@id/horizontal_guideline1"
       app:layout_constraintTop_toTopOf="parent"
       >
-    <View
+
+    <com.asfoundation.wallet.ui.common.SeparatorView
         android:id="@+id/top_separator"
         android:layout_width="match_parent"
-        android:layout_height="1dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
-        android:background="#fbfbfb"
+        app:line_type="solid"
+        app:line_orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
