--- a/app/src/main/res/layout-land/fragment_carrier_confirm.xml
+++ b/app/src/main/res/layout-land/fragment_carrier_confirm.xml
@@ -130,7 +130,7 @@
       app:layout_constraintTop_toBottomOf="@+id/payment_methods_header"
       />
 
-  <com.asfoundation.wallet.ui.iab.payments.common.SeparatorView
+  <com.asfoundation.wallet.ui.common.SeparatorView
       android:id="@+id/mid_separator"
       android:layout_width="wrap_content"
       android:layout_height="0dp"
@@ -143,7 +143,7 @@
       app:line_type="dashed"
       />
 
-  <com.asfoundation.wallet.ui.iab.payments.common.SeparatorView
+  <com.asfoundation.wallet.ui.common.SeparatorView
       android:id="@+id/top_separator"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
@@ -153,7 +153,7 @@
       app:layout_constraintTop_toTopOf="parent"
       />
 
-  <com.asfoundation.wallet.ui.iab.payments.common.SeparatorView
+  <com.asfoundation.wallet.ui.common.SeparatorView
       android:id="@+id/bottom_separator"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
