--- a/app/src/main/res/layout-land/payment_methods_layout.xml
+++ b/app/src/main/res/layout-land/payment_methods_layout.xml
@@ -83,16 +83,17 @@
           app:layout_constraintGuide_percent="0.46"
           />
 
-      <View
+      <com.asfoundation.wallet.ui.common.SeparatorView
           android:id="@+id/top_separator"
           android:layout_width="0dp"
-          android:layout_height="1dp"
+          android:layout_height="wrap_content"
           android:layout_marginTop="@dimen/big_margin"
-          android:background="@color/layout_separator_color"
           app:layout_constraintBottom_toTopOf="@id/payment_methods_header"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="parent"
+          app:line_orientation="horizontal"
+          app:line_type="solid"
           />
 
       <include
@@ -261,15 +262,16 @@
           app:layout_constraintTop_toBottomOf="@+id/layout_pre_selected"
           />
 
-      <View
+      <com.asfoundation.wallet.ui.common.SeparatorView
           android:id="@+id/bottom_separator_buttons"
           android:layout_width="match_parent"
-          android:layout_height="1dp"
+          android:layout_height="wrap_content"
           android:layout_marginTop="232dp"
-          android:background="@color/layout_separator_color"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@id/top_separator"
+          app:line_orientation="horizontal"
+          app:line_type="solid"
           />
 
       <androidx.constraintlayout.widget.Guideline
