--- a/app/src/main/res/layout/activity_transaction_detail.xml
+++ b/app/src/main/res/layout/activity_transaction_detail.xml
@@ -108,14 +108,13 @@
           app:layout_constraintTop_toBottomOf="@id/app_id"
           />
 
-      <View
+      <com.asfoundation.wallet.ui.common.SeparatorView
           android:id="@+id/top_separator"
           android:layout_width="match_parent"
-          android:layout_height="1dp"
+          android:layout_height="wrap_content"
           android:layout_marginStart="32dp"
           android:layout_marginTop="32dp"
           android:layout_marginEnd="32dp"
-          android:background="#eaeaea"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@id/item_id"
@@ -217,14 +216,13 @@
           app:layout_constraintStart_toEndOf="@id/guideline_mid"
           />
 
-      <View
+      <com.asfoundation.wallet.ui.common.SeparatorView
           android:id="@+id/bottom_separator"
           android:layout_width="match_parent"
-          android:layout_height="1dp"
+          android:layout_height="wrap_content"
           android:layout_marginStart="32dp"
           android:layout_marginTop="35dp"
           android:layout_marginEnd="32dp"
-          android:background="#eaeaea"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@id/to_label"
