--- a/app/src/main/res/layout/fragment_adyen_top_up.xml
+++ b/app/src/main/res/layout/fragment_adyen_top_up.xml
@@ -67,15 +67,16 @@
           app:layout_constraintTop_toBottomOf="@id/main_value"
           />
 
-      <View
+      <com.asfoundation.wallet.ui.common.SeparatorView
           android:id="@+id/top_separator_topup"
           android:layout_width="match_parent"
-          android:layout_height="1dp"
+          android:layout_height="wrap_content"
           android:layout_marginStart="32dp"
           android:layout_marginTop="8dp"
           android:layout_marginEnd="32dp"
-          android:background="#eaeaea"
           android:visibility="invisible"
+          app:line_type="solid"
+          app:line_orientation="horizontal"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@id/value_warning_text"
