--- a/app/src/main/res/layout/fragment_carrier_verify_phone.xml
+++ b/app/src/main/res/layout/fragment_carrier_verify_phone.xml
@@ -61,7 +61,7 @@
       app:layout_constraintTop_toBottomOf="@+id/phone_number_layout"
       />
 
-  <com.asfoundation.wallet.ui.iab.payments.common.SeparatorView
+  <com.asfoundation.wallet.ui.common.SeparatorView
       android:id="@+id/line_separator"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
@@ -94,7 +94,7 @@
         />
   </com.google.android.material.textfield.TextInputLayout>
 
-  <com.asfoundation.wallet.ui.iab.payments.common.SeparatorView
+  <com.asfoundation.wallet.ui.common.SeparatorView
       android:id="@+id/bottom_separator_buttons"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
