--- a/app/src/main/res/layout/fragment_iab_error.xml
+++ b/app/src/main/res/layout/fragment_iab_error.xml
@@ -72,7 +72,7 @@
       app:layout_constraintTop_toBottomOf="@+id/error_message"
       />
 
-  <com.asfoundation.wallet.ui.iab.payments.common.SeparatorView
+  <com.asfoundation.wallet.ui.common.SeparatorView
       android:id="@+id/bottom_separator_buttons"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
