--- a/app/src/main/res/layout-land/fragment_carrier_verify_phone.xml
+++ b/app/src/main/res/layout-land/fragment_carrier_verify_phone.xml
@@ -55,28 +55,72 @@
 
         />
 
-    <com.google.android.material.textfield.TextInputLayout
+    <LinearLayout
         android:id="@+id/phone_number_layout"
-        style="@style/AppcoinsTextInputLayout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:hint="@string/carrier_billing_phone_field"
+        android:background="@drawable/rectangle_outline_grey_radius_8dp"
+        android:orientation="horizontal"
+        android:paddingTop="4dp"
+        android:paddingBottom="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/title"
         app:layout_constraintTop_toBottomOf="@+id/disclaimer"
         >
-      <com.google.android.material.textfield.TextInputEditText
-          android:id="@+id/phone_number"
-          android:layout_width="match_parent"
-          android:layout_height="48dp"
-          android:imeOptions="flagNoExtractUi|flagNoFullscreen"
-          android:maxLines="1"
-          android:textSize="14sp"
-          tools:text="912345678"
+
+      <com.hbb20.CountryCodePicker
+          android:id="@+id/country_code_picker"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_gravity="center"
+          android:layout_marginStart="5dp"
+          app:ccpDialog_background="@drawable/ccp_background"
+          app:ccpDialog_textColor="#000000"
+          app:ccp_arrowColor="@color/black_87_alpha"
+          app:ccp_arrowSize="16dp"
+          app:ccp_autoDetectCountry="true"
+          app:ccp_showNameCode="false"
+          app:ccp_textSize="14sp"
           />
-    </com.google.android.material.textfield.TextInputLayout>
+
+      <com.asfoundation.wallet.ui.common.SeparatorView
+          android:layout_width="1dp"
+          android:layout_height="match_parent"
+          android:layout_marginTop="4dp"
+          android:layout_marginBottom="4dp"
+          app:line_orientation="vertical"
+          app:line_type="solid"
+          />
+
+      <com.google.android.material.textfield.TextInputLayout
+          style="@style/PaymentMethods.Carrier.PhoneNumberLayout"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:layout_gravity="center"
+          >
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/phone_number"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:fontFamily="sans-serif-medium"
+            android:hint="@string/carrier_billing_phone_field"
+            android:imeOptions="flagNoExtractUi|flagNoFullscreen"
+            android:inputType="phone"
+            android:maxLines="1"
+            android:singleLine="true"
+            android:textCursorDrawable="@drawable/text_cursor_black"
+            android:textSize="14sp"
+            app:colorControlActivated="#000000"
+            app:colorControlHighlight="#000000"
+            app:colorControlNormal="#000000"
+            app:hintTextAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
+            tools:text="912345678"
+            />
+      </com.google.android.material.textfield.TextInputLayout>
+
+    </LinearLayout>
 
   </androidx.constraintlayout.widget.ConstraintLayout>
 
