--- a/app/src/main/res/values/styles_payment_methods.xml
+++ b/app/src/main/res/values/styles_payment_methods.xml
@@ -20,7 +20,7 @@
 
   <style name="PaymentMethods.Carrier.TextStyle">
     <item name="android:fontFamily">sans-serif-medium</item>
-    <item name="android:textColor">@color/black</item>
+    <item name="android:textColor">@color/black_87_alpha</item>
   </style>
 
   <style name="PaymentMethods.CarrierBilling.Title" parent="PaymentMethods.Carrier.TextStyle">
@@ -32,6 +32,20 @@
     <item name="android:textSize">12sp</item>
   </style>
 
+  <style name="PaymentMethods.Carrier.PhoneNumberLayout" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
+    <item name="android:background">@null</item>
+    <item name="android:textColorHint">@color/grey</item>
+    <item name="android:textColor">@color/black_87_alpha</item>
+    <item name="android:textCursorDrawable">@null</item>
+    <item name="boxStrokeColor">@null</item>
+    <item name="boxBackgroundMode">none</item>
+    <item name="hintEnabled">false</item>
+    <item name="colorControlActivated">#000000</item>
+    <item name="colorControlNormal">#000000</item>
+    <item name="colorControlHighlight">#000000</item>
+    <item name="android:theme">@style/EditTextCursorTheme</item>
+  </style>
+
   <style name="PaymentMethods.Error" />
 
   <style name="PaymentMethods.Error.OtherPaymentsButton" parent="@style/Widget.MaterialComponents.Button.TextButton">
@@ -40,7 +54,6 @@
     <item name="android:fontFamily">sans-serif-medium</item>
     <item name="android:lineSpacingExtra">4sp</item>
     <item name="android:textStyle">normal</item>
-
   </style>
 
 </resources>
