--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
   <color name="orange">#ef6c00</color>
   <color name="white">#FFFFFFFF</color>
   <color name="black">#313849</color>
+  <color name="real_black">#000000</color>
   <color name="appc_pink">#fe7073</color>
 
   <color name="colorPrimary">#fc9d48</color>
@@ -131,4 +132,14 @@
 
   <color name="color_inactive">#727272</color>
   <color name="bottom_sheet_translucent_background">#75000000</color>
+
+
+  <!-- Verify Wallet -->
+  <color name="verify_wallet_description">#57aa00</color>
+  <color name="verify_wallet_subtitle">#646464</color>
+  <color name="verify_wallet_description_background">#0F57aa00</color>
+  <color name="verify_wallet_cancel">#707070</color>
+  <color name="verify_wallet_example_background">#2Bd6d6d6</color>
+  <color name="verify_wallet_example_code_background">#707070</color>
+  <color name="verify_wallet_code_background">#afafaf</color>
 </resources>
