--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -769,4 +769,92 @@
     <item name="android:inputType">textPassword</item>
     <item name="android:imeOptions">flagNoFullscreen|flagNoExtractUi</item>
   </style>
+
+  <style name="VerifyWallet" />
+
+  <style name="VerifyWallet.Title" parent="TextAppearance.AppCompat.Body1.Roboto.Medium">
+    <item name="android:textColor">@color/real_black</item>
+    <item name="android:textSize">16sp</item>
+    <item name="android:gravity">start</item>
+    <item name="android:letterSpacing">0.01</item>
+    <item name="android:lineSpacingExtra">2sp</item>
+  </style>
+
+  <style name="VerifyWallet.Subtitle" parent="TextAppearance.AppCompat.Body1.Roboto.Medium">
+    <item name="android:textColor">@color/verify_wallet_subtitle</item>
+    <item name="android:textSize">12sp</item>
+    <item name="android:gravity">start</item>
+    <item name="android:textStyle">normal</item>
+    <item name="android:lineSpacingExtra">4sp</item>
+  </style>
+
+  <style name="VerifyWallet.Description" parent="TextAppearance.AppCompat.Body1.Roboto.Medium">
+    <item name="android:background">@color/verify_wallet_description_background</item>
+    <item name="android:textColor">@color/verify_wallet_description</item>
+    <item name="android:textSize">12sp</item>
+    <item name="android:gravity">start</item>
+    <item name="android:lineSpacingExtra">4sp</item>
+  </style>
+
+  <style name="VerifyWallet.ChangeCard.Button" parent="@style/Widget.MaterialComponents.Button">
+    <item name="android:textColor">@color/text_button_color</item>
+    <item name="android:textSize">12sp</item>
+    <item name="android:fontFamily">sans-serif-medium</item>
+    <item name="android:lineSpacingExtra">2sp</item>
+    <item name="android:letterSpacing">0.09</item>
+    <item name="android:textStyle">normal</item>
+  </style>
+
+  <style name="VerifyWallet.Code.EditText" parent="@style/Widget.AppCompat.EditText">
+    <item name="android:textAppearance">@style/TextAppearance.AppCompat.Body1.Roboto.Regular</item>
+    <item name="android:textColor">@color/real_black</item>
+    <item name="android:textSize">16sp</item>
+    <item name="android:gravity">start|center_vertical</item>
+    <item name="android:paddingStart">12dp</item>
+    <item name="android:paddingEnd">12dp</item>
+    <item name="android:lineSpacingExtra">3sp</item>
+    <item name="android:letterSpacing">0.01</item>
+    <item name="android:ems">4</item>
+    <item name="android:maxEms">4</item>
+  </style>
+
+  <style name="VerifyWallet.Submit.Button" parent="@style/MaterialButtonStyle" />
+
+  <style name="VerifyWallet.Cancel.Button" parent="@style/Widget.MaterialComponents.Button.TextButton">
+    <item name="android:textColor">@color/verify_wallet_cancel</item>
+    <item name="android:textSize">14sp</item>
+    <item name="android:fontFamily">sans-serif-medium</item>
+    <item name="android:lineSpacingExtra">2sp</item>
+    <item name="android:textStyle">normal</item>
+  </style>
+
+  <style name="VerifyWallet.Example.Title" parent="TextAppearance.AppCompat.Body1.Roboto.Regular">
+    <item name="android:textColor">@color/verify_wallet_subtitle</item>
+    <item name="android:textSize">10sp</item>
+    <item name="android:gravity">center_horizontal</item>
+    <item name="android:lineSpacingExtra">6sp</item>
+  </style>
+
+  <style name="VerifyWallet.Example.Summary.Title" parent="VerifyWallet.Title">
+    <item name="android:textSize">12sp</item>
+    <item name="android:lineSpacingExtra">4sp</item>
+    <item name="android:textStyle">bold</item>
+  </style>
+
+  <style name="VerifyWallet.Example.Summary.Value" parent="TextAppearance.AppCompat.Body1.Roboto.Regular">
+    <item name="android:textColor">@color/verify_wallet_subtitle</item>
+    <item name="android:textSize">12sp</item>
+    <item name="android:gravity">start</item>
+    <item name="android:textStyle">normal</item>
+    <item name="android:lineSpacingExtra">4sp</item>
+  </style>
+
+  <style name="VerifyWallet.Example.Disclaimer" parent="TextAppearance.AppCompat.Body1.Roboto.Regular">
+    <item name="android:textColor">@color/real_black</item>
+    <item name="android:textSize">9sp</item>
+    <item name="android:gravity">start</item>
+    <item name="android:textStyle">normal</item>
+    <item name="android:lineSpacingExtra">3sp</item>
+  </style>
+
 </resources>
