--- a/app/src/main/res/layout-land/activity_onboarding.xml
+++ b/app/src/main/res/layout-land/activity_onboarding.xml
@@ -60,7 +60,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/lottie_onboarding_landscape"
         app:piv_animationType="none"
-        app:piv_count="4"
+        app:piv_count="3"
         app:piv_padding="30dp"
         app:piv_radius="4dp"
         app:piv_selectedColor="@color/selection_dot_selected"
@@ -104,23 +104,6 @@
         app:layout_constraintGuide_percent="0.83"
         />
 
-    <Button
-        android:id="@+id/been_invited_bonus"
-        style="@style/ButtonStyle.Light"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_gravity="center"
-        android:clickable="true"
-        android:focusable="true"
-        android:maxHeight="40dp"
-        android:text="@string/referral_onboarding_redeem_button"
-        android:visibility="visible"
-        app:layout_constraintBottom_toBottomOf="@id/button_guideline"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/onboarding_viewpager"
-        />
-
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/payment_methods_recycler_view"
         android:layout_width="wrap_content"
@@ -146,7 +129,7 @@
         app:layout_constraintBottom_toTopOf="@id/terms_conditions_warning"
         app:layout_constraintEnd_toStartOf="@+id/next_button"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/been_invited_bonus"
+        app:layout_constraintTop_toBottomOf="@id/onboarding_viewpager"
         app:layout_constraintVertical_bias="1"
         >
 
@@ -223,13 +206,4 @@
         />
 
   </androidx.constraintlayout.widget.ConstraintLayout>
-
-  <include
-      android:id="@+id/onboarding_layout_validation_no_internet"
-      layout="@layout/layout_validation_no_internet"
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:layout_centerInParent="true"
-      android:visibility="gone"
-      />
 </RelativeLayout>
