[WAL-99] Added missing arrow on promotion tooltip

--- a/app/src/main/res/layout-land/backup_tooltip.xml
+++ b/app/src/main/res/layout-land/backup_tooltip.xml
@@ -84,7 +84,7 @@
       android:layout_height="wrap_content"
       android:layout_marginEnd="16dp"
       android:elevation="1dp"
-      android:src="@drawable/ic_up_arrow"
+      android:src="@drawable/ic_tooltip_arrow_up"
       app:layout_constraintBottom_toTopOf="@id/backup_tooltip"
       app:layout_constraintEnd_toEndOf="@id/backup_tooltip"
       app:layout_constraintTop_toTopOf="parent"
