--- a/app/src/main/res/layout/overlay_fragment.xml
+++ b/app/src/main/res/layout/overlay_fragment.xml
@@ -86,7 +86,7 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:elevation="1dp"
-      android:src="@drawable/ic_arrow_down"
+      android:src="@drawable/ic_tooltip_arrow_down"
       app:layout_constraintEnd_toEndOf="@id/bn_icon_guideline"
       app:layout_constraintStart_toStartOf="@id/bn_icon_guideline"
       app:layout_constraintTop_toBottomOf="@id/promotions_dialog"
