[WAL-89] Moved warning text below T&C and adjust margins to fit in smaller devices

--- a/app/src/main/res/layout-land/activity_onboarding.xml
+++ b/app/src/main/res/layout-land/activity_onboarding.xml
@@ -110,7 +110,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:orientation="horizontal"
-        android:visibility="gone"
+        android:visibility="invisible"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toTopOf="@id/button_guideline"
         app:layout_constraintEnd_toEndOf="parent"
