WAL-57 - Changed error response to match the new specified response Added analytics and transaction status handling after webview flow

--- a/app/src/main/res/layout/fragment_carrier_confirm.xml
+++ b/app/src/main/res/layout/fragment_carrier_confirm.xml
@@ -7,18 +7,6 @@
     android:theme="@style/MaterialAppTheme"
     >
 
-  <ProgressBar
-      android:id="@+id/progress_bar"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:indeterminateDrawable="@drawable/gradient_progress"
-      android:visibility="invisible"
-      app:layout_constraintBottom_toTopOf="@id/purchase_bonus"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@+id/line_separator"
-      />
-
   <ImageView
       android:id="@+id/carrier_image"
       android:layout_width="0dp"
@@ -129,6 +117,32 @@
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@id/bottom_separator_buttons"
+      />
+
+  <!--  Transaction Status-->
+  <ProgressBar
+      android:id="@+id/progress_bar"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:indeterminateDrawable="@drawable/gradient_progress"
+      android:visibility="invisible"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      />
+
+
+  <include
+      android:id="@+id/complete_payment_view"
+      layout="@layout/fragment_iab_transaction_completed"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:visibility="invisible"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
       />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
