--- a/app/src/main/res/layout-land/fragment_carrier_confirm.xml
+++ b/app/src/main/res/layout-land/fragment_carrier_confirm.xml
@@ -6,18 +6,6 @@
     android:theme="@style/MaterialAppTheme"
     >
 
-  <ProgressBar
-      android:id="@+id/progress_bar"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:indeterminateDrawable="@drawable/gradient_progress"
-      android:visibility="gone"
-      app:layout_constraintBottom_toTopOf="@id/bottom_separator"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintStart_toStartOf="@id/mid_guideline"
-      app:layout_constraintTop_toBottomOf="@id/top_separator"
-      />
-
   <androidx.constraintlayout.widget.ConstraintLayout
       android:id="@+id/info_view"
       android:layout_width="0dp"
@@ -174,6 +162,33 @@
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@id/bottom_separator"
+      />
+
+
+  <!--  Transaction Status-->
+  <ProgressBar
+      android:id="@+id/progress_bar"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:indeterminateDrawable="@drawable/gradient_progress"
+      android:visibility="invisible"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      />
+
+
+  <include
+      android:id="@+id/complete_payment_view"
+      layout="@layout/fragment_iab_transaction_completed"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:visibility="invisible"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
       />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
