--- a/app/src/main/res/layout-land/fragment_iab_error.xml
+++ b/app/src/main/res/layout-land/fragment_iab_error.xml
@@ -25,6 +25,7 @@
       android:id="@+id/error_title"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
+      android:layout_marginTop="12dp"
       android:fontFamily="sans-serif"
       android:letterSpacing="0.03"
       android:lineSpacingExtra="4sp"
@@ -47,6 +48,7 @@
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_marginStart="16dp"
+      android:layout_marginTop="12dp"
       android:layout_marginEnd="16dp"
       android:textAlignment="center"
       android:textColor="@color/pending_payment_text_color"
@@ -66,16 +68,61 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/purchase_more_payment_methods_button"
-      app:layout_constraintBottom_toTopOf="@id/bottom_separator_buttons"
+      android:visibility="gone"
+      app:layout_constraintBottom_toTopOf="@id/contact_us"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/error_message"
+      />
+
+  <TextView
+      android:id="@+id/contact_us"
+      style="@style/TextAppearance.AppCompat.Body1.Roboto.Regular"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="@dimen/big_margin"
+      android:text="@string/error_contac_us_body"
+      android:textAlignment="center"
+      android:textColor="@color/grey_8a_alpha"
+      android:textSize="12sp"
+
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@+id/more_payment_methods"
+      />
+
+  <ImageView
+      android:id="@+id/layout_support_logo"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="12dp"
+      android:layout_marginEnd="@dimen/small_margin"
+      android:src="@drawable/ic_logo_appc_support"
+      app:layout_constraintBottom_toTopOf="@id/bottom_separator_buttons"
+      app:layout_constraintEnd_toStartOf="@id/layout_support_icn"
+      app:layout_constraintHorizontal_chainStyle="packed"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@+id/contact_us"
+
+      />
+
+  <ImageView
+      android:id="@+id/layout_support_icn"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginStart="@dimen/small_margin"
+      android:src="@drawable/ic_open_in_new_24"
+      app:layout_constraintBottom_toBottomOf="@id/layout_support_logo"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toEndOf="@id/layout_support_logo"
+      app:layout_constraintTop_toTopOf="@id/layout_support_logo"
       />
 
   <com.asfoundation.wallet.ui.common.SeparatorView
       android:id="@+id/bottom_separator_buttons"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
+      android:visibility="invisible"
       app:layout_constraintBottom_toTopOf="@id/dialog_buy_buttons"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
