--- a/app/src/main/res/layout/fragment_iab_error.xml
+++ b/app/src/main/res/layout/fragment_iab_error.xml
@@ -67,9 +67,50 @@
       android:layout_height="wrap_content"
       android:layout_marginTop="25dp"
       android:text="@string/purchase_more_payment_methods_button"
+      android:visibility="gone"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/error_message"
+      />
+
+  <TextView
+      android:id="@+id/contact_us"
+      style="@style/TextAppearance.AppCompat.Body1.Roboto.Regular"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="32dp"
+      android:text="@string/error_contac_us_body"
+      android:textAlignment="center"
+      android:textColor="@color/grey_8a_alpha"
+      android:textSize="12sp"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@+id/more_payment_methods"
+      />
+
+  <ImageView
+      android:id="@+id/layout_support_logo"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="18dp"
+      android:layout_marginEnd="@dimen/small_margin"
+      android:src="@drawable/ic_logo_appc_support"
+      app:layout_constraintEnd_toStartOf="@id/layout_support_icn"
+      app:layout_constraintHorizontal_chainStyle="packed"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@+id/contact_us"
+      />
+
+  <ImageView
+      android:id="@+id/layout_support_icn"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginStart="@dimen/small_margin"
+      android:src="@drawable/ic_open_in_new_24"
+      app:layout_constraintBottom_toBottomOf="@id/layout_support_logo"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toEndOf="@id/layout_support_logo"
+      app:layout_constraintTop_toTopOf="@id/layout_support_logo"
       />
 
   <com.asfoundation.wallet.ui.common.SeparatorView
@@ -78,9 +119,10 @@
       android:layout_height="wrap_content"
       android:layout_marginTop="25dp"
       android:layout_marginBottom="8dp"
+      android:visibility="invisible"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@id/more_payment_methods"
+      app:layout_constraintTop_toBottomOf="@id/layout_support_icn"
       app:line_type="solid"
       />
 
