--- a/app/src/main/res/layout/fragment_verification_intro.xml
+++ b/app/src/main/res/layout/fragment_verification_intro.xml
@@ -14,10 +14,10 @@
       android:layout_marginStart="24dp"
       android:layout_marginTop="27dp"
       android:layout_marginEnd="41dp"
+      android:text="@string/card_verification_body"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
-      tools:text="Use your credit/debit card to verify your wallet"
       />
 
   <RelativeLayout
@@ -68,7 +68,7 @@
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@id/cc_container"
-      tools:text="We’ll charge %s to your card, and it will be refunded once you confirm the received code."
+      tools:text="@string/card_verification_charde_disclaimer"
       />
 
   <Button
