--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -857,4 +857,12 @@
     <item name="android:lineSpacingExtra">3sp</item>
   </style>
 
+  <style name="VerifyWallet.Success" parent="TextAppearance.AppCompat.Body1.Roboto.Medium">
+    <item name="android:textColor">@color/real_black</item>
+    <item name="android:textSize">19sp</item>
+    <item name="android:gravity">center_horizontal</item>
+    <item name="android:textStyle">normal</item>
+    <item name="android:lineSpacingExtra">7sp</item>
+  </style>
+
 </resources>
