--- a/app/src/main/res/layout-land/fragment_verification_intro.xml
+++ b/app/src/main/res/layout-land/fragment_verification_intro.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true"
+    android:theme="@style/MaterialAppTheme"
     >
 
   <androidx.constraintlayout.widget.ConstraintLayout
@@ -29,11 +30,12 @@
         android:id="@+id/cc_container"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:paddingStart="25dp"
-        android:paddingEnd="25dp"
+        android:layout_marginTop="@dimen/half_large_margin"
+        android:paddingStart="@dimen/normal_margin"
+        android:paddingEnd="@dimen/big_margin"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/guideline_mid"
-        app:layout_constraintTop_toBottomOf="@id/title"
+        app:layout_constraintTop_toTopOf="parent"
         >
 
       <include
@@ -63,7 +65,6 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/big_margin"
-        android:layout_marginTop="24dp"
         android:layout_marginEnd="@dimen/big_margin"
         android:paddingStart="@dimen/big_margin"
         android:paddingTop="13dp"
@@ -72,8 +73,8 @@
         app:layout_constraintBottom_toBottomOf="@id/cc_container"
         app:layout_constraintEnd_toStartOf="@id/guideline_mid"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/cc_container"
-        app:layout_constraintVertical_bias="0.1"
+        app:layout_constraintTop_toBottomOf="@+id/title"
+        app:layout_constraintVertical_bias="0.15"
         tools:text="@string/card_verification_charde_disclaimer"
         />
 
@@ -97,9 +98,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="24dp"
+        android:enabled="false"
+        android:text="@string/get_code_button"
         app:layout_constraintBaseline_toBaselineOf="@id/cancel"
         app:layout_constraintEnd_toEndOf="parent"
-        tools:text="GET A CODE"
         />
 
     <Button
@@ -109,11 +111,11 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="56dp"
         android:layout_marginBottom="22dp"
+        android:text="@string/cancel"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/submit"
         app:layout_constraintHorizontal_bias="1"
         app:layout_constraintStart_toStartOf="parent"
-        tools:text="CANCEL"
         />
 
     <androidx.constraintlayout.widget.Guideline
