--- a/app/src/main/res/layout/fragment_verification_code.xml
+++ b/app/src/main/res/layout/fragment_verification_code.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:theme="@style/MaterialAppTheme"
     >
 
   <TextView
@@ -105,12 +106,12 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginEnd="24dp"
+      android:text="@string/confirm_button"
       app:layout_constraintBaseline_toBaselineOf="@id/cancel"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toBottomOf="@id/change_card_button"
       app:layout_constraintVertical_bias="0"
-      tools:text="CONFIRM"
       />
 
   <Button
@@ -119,13 +120,13 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="56dp"
+      android:text="@string/backup_tooltip_later_button"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toStartOf="@id/submit"
       app:layout_constraintHorizontal_bias="1"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@id/change_card_button"
       app:layout_constraintVertical_bias="0"
-      tools:text="MAYBE LATER"
       />
 
   <com.airbnb.lottie.LottieAnimationView
