--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -37,6 +37,8 @@
     <item name="colorControlActivated">@color/pinkish_orange</item>
   </style>
 
+  <style name="AdyenCheckout.TextInputLayout" parent="AppcoinsTextInputLayout" />
+
   <style name="AppTheme.NoActionBar" parent="AppTheme">
     <item name="windowActionBar">false</item>
     <item name="windowNoTitle">true</item>
