--- a/app/src/main/res/layout-land/fragment_carrier_verify_phone.xml
+++ b/app/src/main/res/layout-land/fragment_carrier_verify_phone.xml
@@ -122,6 +122,17 @@
 
     </LinearLayout>
 
+    <TextView
+        android:id="@+id/other_payments_button"
+        style="@style/PaymentMethods.Error.OtherPaymentsButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/purchase_more_payment_methods_button"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="@+id/phone_number_layout"
+        app:layout_constraintTop_toBottomOf="@+id/phone_number_layout"
+        />
+
   </androidx.constraintlayout.widget.ConstraintLayout>
 
 
